Upgrade react-scripts and Node engine for Vercel

--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
+}
+,
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -56,4 +57,10 @@
       "last 1 safari version"
     ]
   }
+  ,
+  "engines": {
+  "node": "22.x"
+}
+
+  
 }
